argocd/manifests/microbin/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: microbin
  labels:
    app.kubernetes.io/name: microbin
    app.kubernetes.io/managed-by: argocd
