argocd/manifests/microbin/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microbin
  namespace: microbin
spec:
  selector:
    app: microbin
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  type: ClusterIP
